# katengine_gold2

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/src/cpp/kat/: app.cpp  event.cpp  systemctx.cpp  window.cpp
engine/src/include/kat/: app.hpp  core.hpp  entry_point.hpp  event.hpp  systemctx.hpp  window.hpp
testapp/: CMakeLists.txt
testapp/src/cpp/: main.cpp
